--- a/app/assets/lang/ko_KR.toml
+++ b/app/assets/lang/ko_KR.toml
@@ -8,7 +8,7 @@ serverStatusPlaceholder = "오프라인"
 mojangStatus = "MOJANG 상태"
 mojangStatusTooltipTitle = "서비스"
 mojangStatusNETitle = "Non&nbsp;Essential"
-newsButton = "NEWS"
+newsButton = "도움말"
 launchButton = "PLAY"
 launchButtonPlaceholder = "&#8226; 선택된 서버 없음"
 launchDetails = "잠시만 기다려주세요.."
