일부 글자 수정

--- a/app/assets/lang/en_US.toml
+++ b/app/assets/lang/en_US.toml
@@ -9,7 +9,7 @@ mojangStatus = "MOJANG STATUS"
 mojangStatusTooltipTitle = "Services"
 mojangStatusNETitle = "Non&nbsp;Essential"
 newsButton = "Help"
-launchButton = "PLAY"
+launchButton = "Join Server"
 launchButtonPlaceholder = "&#8226; No Server Selected"
 launchDetails = "Please wait.."
 newsNavigationStatus = "{currentPage} of {totalPages}"
