--- a/app/assets/lang/ko_KR.toml
+++ b/app/assets/lang/ko_KR.toml
@@ -9,7 +9,7 @@ mojangStatus = "MOJANG 상태"
 mojangStatusTooltipTitle = "서비스"
 mojangStatusNETitle = "Non&nbsp;Essential"
 newsButton = "도움말"
-launchButton = "PLAY"
+launchButton = "서버 접속하기"
 launchButtonPlaceholder = "&#8226; 선택된 서버 없음"
 launchDetails = "잠시만 기다려주세요.."
 newsNavigationStatus = "{currentPage} / {totalPages}"
